tests/fixtures/errors/E0911_qq_lhs_not_optional.mimz
// expect: E0911
module M {
  in a: bits[8]
  out o: bits[8]
  o = a ?? 0
}
